<resources>
    <string name="app_name">Smart Exam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logo">logo</string>
    <string name="username">Username</string>
    <string name="department">Department</string>
    <string name="level">Level</string>
    <string name="my_account">My Account</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="submit">submit</string>
    <string name="ahmed_hamada">Ahmed Hamada</string>
    <string name="back_end_developer">Back-End Developer</string>
    <string name="img">img</string>
    <string name="abdelrhman_ghanem">Abdelrhman Ghanem</string>
    <string name="android_developer">Android Developer</string>
    <string name="abdallah_fathy">AbdAllah Fathy</string>
    <string name="front_end_developer">Front-End Developer</string>
    <string name="abdulrahman_ragab">Abdulrahman Ragab</string>
    <string name="supervisor">Supervisor</string>
    <string name="dr_amr_abohany">Dr. Amr Abohany</string>
    <string name="back_to_home">Back To Home</string>
    <string name="name">Name:</string>
    <string name="log_out">Log Out</string>
    <string name="thanks_for_submit">Thanks For Submit</string>
    <string name="eng_moatasem">Eng. Moatasem</string>
    <string name="supervisors">Supervisors</string>

</resources>