<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_gragh"
    app:startDestination="@id/viewExamFragment">

    <fragment
        android:id="@+id/logInFragment"
        android:name="com.example.e_exam.fragment.LogInFragment"
        android:label="@string/log_in"
        tools:layout="@layout/fragment_log_in">
        <action
            android:id="@+id/action_logInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.e_exam.fragment.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_logInFragment"
            app:destination="@id/logInFragment" />
    </fragment>
    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="com.example.e_exam.fragment.SplashScreenFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash_screen">
        <action
            android:id="@+id/action_splashScreenFragment_to_logInFragment"
            app:destination="@id/logInFragment"
            app:popUpTo="@id/splashScreenFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/viewExamFragment"
        android:name="com.example.e_exam.fragment.ViewExamFragment"
        android:label="ViewExamFragment" />
</navigation>