<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MyAccountFragment">




    <LinearLayout
        android:id="@+id/lay_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/logo"
            android:contentDescription="@string/logo" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/lay_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_picture"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="@color/orange_500"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@color/orange_500"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/department"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/department"
            android:textAlignment="center"
            android:textColor="@color/orange_500"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_department"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/level"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/level"
            android:textAlignment="center"
            android:textColor="@color/orange_500"
            android:textSize="25sp" />

    </LinearLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_level"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/log_out" />

    </RelativeLayout>





</RelativeLayout>